# cheatcheat

./: README.md  cheat.py  conf.yml  pyproject.toml
.cheat/: test_ext.txt  test_no_ext
src/cheatcheat/: main.py
